--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="red">#ff0000</color>
     <color name="black">#000000</color>
     <color name="light_blue">#3399ff</color>
     <color name="light_grey">#A0A0A0</color>
