--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -33,6 +33,7 @@
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:gravity="center"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="@string/btn_activity_login_private"
@@ -45,6 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textColor="@color/black"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/btn_activity_login_business"
